using openapi-generator generate -i openapi.yaml -g nodejs-express-server
