# src/controllers/ItemController.js
@@ -1,0 +1,28 @@
+/**
+ * The ItemController file is a very simple one, which does not need to be changed manually,
+ * unless there's a case where business logic reoutes the request to an entity which is not
+ * the service.
+ * The heavy lifting of the Controller item is done in Request.js - that is where request
+ * parameters are extracted and sent to the service, and where response is handled.
+ */
+
+const Controller = require('./Controller');
+const service = require('../services/ItemService');
+const getLikes = async (request, response) => {
+  await Controller.handleRequest(request, response, service.getLikes);
+};
+
+const getLikesWidget = async (request, response) => {
+  await Controller.handleRequest(request, response, service.getLikesWidget);
+};
+
+const updateLikes = async (request, response) => {
+  await Controller.handleRequest(request, response, service.updateLikes);
+};
+
+
+module.exports = {
+  getLikes,
+  getLikesWidget,
+  updateLikes,
+};
